--- a/1-1.html
+++ b/1-1.html
@@ -6,6 +6,17 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 <body>
-
+    <p>You Start In A Town.</p>
+    <p>In The Town, You See:</p>
+    <ol>
+        <li><a href="1-2.html">A Way Out</a></li>
+        <li><a href="1-3.html">A Mine</a></li>
+        <li><a href="1-4.html">A Market</a></li>
+        <li><a href="1-5.html">A Blacksmith</a></li>
+    </ol>
+    <p>Which Will You Go To?</p>
+    <p id="mon">0</p>
+    <button onclick="gainMoney(1)">Click</button>
 </body>
+<script src="variables.js"></script>
 </html>
